Finished testSessions routes
